--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         <div class="box" id="husbandBox" role="checkbox" aria-checked="false" aria-label="Jestem mężem Mani">
           <div class="spinner" id="spin"></div>
         </div>
-        <div class="checktext">Jestem mężem Mani</div>
+        <div class="checktext">Jestem mężem Marianny Pawlak</div>
       </div>
 
       <div class="checkright">
